# nasdaq-hotspot-agent

./: .env.example  .gitignore  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml
config/: watchlist.json
src/nasdaq_hotspot_agent/: __init__.py  cli.py  config.py  models.py  pipeline.py  report.py  scoring.py  themes.py  timezones.py
src/nasdaq_hotspot_agent/llm/: __init__.py  base.py  factory.py  openai_compatible.py
src/nasdaq_hotspot_agent/providers/: base.py  enriched.py  factory.py  mock.py  news.py  stooq.py
